--- a/app/src/main/res/layout/activity_man_hinh_chao.xml
+++ b/app/src/main/res/layout/activity_man_hinh_chao.xml
@@ -5,44 +5,58 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".ManHinhChao_Activity">
-<ImageView
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/shape_icon1"
-    android:id="@+id/imv_icon1"/>
+    tools:context=".ManHinhChao_Activity"
+    >
+
+    <ImageView
+        android:id="@+id/imv_icon1"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/shape_icon1"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="-45dp"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
+        android:id="@+id/tv_tittle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Wellcome to Project"
-        android:textColor="@color/white"
-        android:textStyle="bold"
-        android:textSize="60dp"
+        android:layout_margin="10dp"
+        android:text=""
         android:textAlignment="center"
-        app:layout_constraintTop_toTopOf="parent"
+        android:textColor="#574D4D"
+        android:textSize="30dp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="@id/imv_icon1"
         app:layout_constraintRight_toRightOf="@id/imv_icon1"
-        android:id="@+id/tv_tittle"
-         />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/imv_logo"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.374" />
+
+
+    <ImageView
+        android:id="@+id/imv_logo"
+        android:layout_width="300dp"
+        android:layout_height="200dp"
+
+        android:scaleType="centerCrop"
+        android:src="@drawable/logo3"
+        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_tittle" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Make by NAMANH"
-        android:textColor="@color/white"
-        app:layout_constraintTop_toBottomOf="@id/tv_tittle"
+        android:textColor="#302D2D"
+        app:layout_constraintTop_toBottomOf="@id/imv_logo"
         app:layout_constraintLeft_toLeftOf="@id/imv_icon1"
         app:layout_constraintRight_toRightOf="@id/imv_icon1"
         android:id="@+id/tv_creator"/>
-    <ImageView
-        android:layout_width="300dp"
-        android:layout_height="200dp"
-        android:src="@drawable/logo3"
-        android:scaleType="centerCrop"
-        app:layout_constraintTop_toBottomOf="@id/tv_tittle"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:id="@+id/imv_logo"
-        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
