--- a/app/src/main/res/layout/activity_dang_ky.xml
+++ b/app/src/main/res/layout/activity_dang_ky.xml
@@ -24,7 +24,7 @@
                 android:layout_width="300dp"
                 android:layout_height="300dp"
                 android:scaleType="centerCrop"
-                android:src="@drawable/logo1"
+                android:src="@drawable/logo3"
                 />
             <TextView
                 android:layout_width="wrap_content"
@@ -42,7 +42,7 @@
                 android:padding="10dp"
                 tools:ignore="HardcodedText,UnusedAttribute"
                 android:textColor="#000000"
-                android:searchResultHighlightColor="#00BCD4"
+                android:searchResultHighlightColor="#000000"
                 android:background="@drawable/shape_edittext"
                 android:id="@+id/edt_email_dangnky"
                 />
@@ -54,7 +54,7 @@
                 android:padding="10dp"
                 android:inputType="textPassword"
                 android:textColor="#000000"
-                android:searchResultHighlightColor="#BFEA7C"
+                android:searchResultHighlightColor="#000000"
                 android:layout_marginTop="10dp"
                 tools:ignore="Autofill,HardcodedText,UnusedAttribute"
                 android:background="@drawable/shape_edittext"
@@ -68,7 +68,7 @@
                 android:padding="10dp"
                 android:inputType="textPassword"
                 android:textColor="#000000"
-                android:searchResultHighlightColor="#BFEA7C"
+                android:searchResultHighlightColor="#000000"
                 android:layout_marginTop="10dp"
                 tools:ignore="Autofill,HardcodedText,UnusedAttribute"
                 android:background="@drawable/shape_edittext"
