--- a/app/src/main/res/layout/activity_dang_ky.xml
+++ b/app/src/main/res/layout/activity_dang_ky.xml
@@ -20,12 +20,14 @@
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:gravity="center">
+
             <ImageView
                 android:layout_width="300dp"
                 android:layout_height="300dp"
                 android:scaleType="centerCrop"
                 android:src="@drawable/logo3"
-                />
+                android:layout_marginBottom="50dp"/>
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -33,7 +35,8 @@
                 android:textColor="#000000"
                 android:textSize="40dp"
                 android:textStyle="bold"
-                tools:ignore="HardcodedText" />
+                tools:ignore="HardcodedText"
+                android:layout_marginBottom="20dp"/>
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
