--- a/app/src/main/res/layout/activity_dang_nhap.xml
+++ b/app/src/main/res/layout/activity_dang_nhap.xml
@@ -25,6 +25,7 @@
                 android:layout_height="250dp"
                 android:scaleType="centerCrop"
                 android:src="@drawable/logo3"
+                android:layout_marginBottom="50dp"
                 />
             <TextView
                 android:layout_width="wrap_content"
@@ -33,7 +34,8 @@
                 android:textColor="#000000"
                 android:textSize="40dp"
                 android:textStyle="bold"
-                tools:ignore="HardcodedText" />
+                tools:ignore="HardcodedText"
+                android:layout_marginBottom="20dp"/>
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
