--- a/app/src/main/res/layout/activity_sanpham_show.xml
+++ b/app/src/main/res/layout/activity_sanpham_show.xml
@@ -139,7 +139,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:layout_marginTop="?actionBarSize"
-                android:background="#00BCD4"
+                android:background="#FF4500"
                 android:text="Thêm vào giỏ hàng"
                 android:textColor="@color/white"
                 android:textSize="20dp"
