--- a/app/src/main/res/layout/fragment_quan_ly_giay.xml
+++ b/app/src/main/res/layout/fragment_quan_ly_giay.xml
@@ -23,6 +23,6 @@
         android:layout_gravity="end"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
-        android:background="@drawable/more"
+        android:background="@drawable/baseline_add_circle_outline_24"
         android:id="@+id/ibtn_them_sp"/>
 </LinearLayout>
