--- a/app/src/main/res/layout/fragment_quan_ly_nhan_vien.xml
+++ b/app/src/main/res/layout/fragment_quan_ly_nhan_vien.xml
@@ -27,7 +27,7 @@
         android:layout_gravity="end"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
-        android:background="@drawable/more" />
+        android:background="@drawable/baseline_add_circle_outline_24" />
 
 
 </LinearLayout>
