--- a/app/src/main/res/layout/item_quan_ly_khach_hang.xml
+++ b/app/src/main/res/layout/item_quan_ly_khach_hang.xml
@@ -60,10 +60,10 @@
         </LinearLayout>
 
     </LinearLayout>
-<!--    <ImageButton-->
-<!--        android:id="@+id/ibtn_xoa"-->
-<!--        android:layout_width="20dp"-->
-<!--        android:layout_height="20dp"-->
-<!--        android:layout_gravity="center"-->
-<!--        android:background="@drawable/remove"/>-->
+    <ImageButton
+        android:id="@+id/ibtn_xoa"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_gravity="center"
+        android:background="@drawable/remove"/>
 </LinearLayout>
